# zigbee-scene-controller

./: .gitignore  CMakeLists.txt  Kconfig.sysbuild  prj.conf  prj_cdc_acm.conf  west.yml
boards/: nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay  nrf52840dongle_nrf52840_cdc_acm.conf  nrf54l15dk_nrf54l10_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  promicro_nrf52840_nrf52840.overlay  promicro_nrf52840_nrf52840_cdc_acm.conf
boards/others/promicro_nrf52840/: promicro_nrf52840_nrf52840_common.dts  promicro_nrf52840_nrf52840_defconfig
claude/: CMakeLists.txt  main.c  prj.conf
include/: my_device.h  zb_dimmer_switch.h  zb_mem_config_custom.h  zb_range_extender.h
src/: battery.c  battery.h  button.c  led.c  led.h  main.c  my_device.h  secret_buttons.c  zigbee.c  zigbee.h
